--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@ html{
 body{
     overflow-x: hidden;
     color: white;
+    font-family: 'tipografiaPpal';
 }
+
 .banner{
     width: 100%;
     height: 100vh;
@@ -18,7 +20,22 @@ body{
     justify-content: center;
     background-color: #514C9CFF;
 }
-
+.banner nav{
+    position: absolute;
+    right: 0;
+    top: 5vh;
+    z-index: 1;
+}
+.banner nav a{
+    padding-right: 1.5em;
+    text-decoration: none;
+    color: white;
+    opacity: 0.7;
+    font-size: 1vw;
+}
+.layer-1{
+    z-index: 0;
+}
 img{
     position: absolute;
     bottom: 0;
@@ -76,4 +93,29 @@ p{
     color: #696fe888;
     font-size: 1.5em;
     opacity: 1;
+}
+@font-face {
+    font-family: 'tipografiaPpal';
+    src: url('../tip/tip.ttf');
+}
+
+.custom-shape-divider-bottom-1684267570 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1684267570 svg {
+    position: relative;
+    display: block;
+    width: calc(127% + 1.3px);
+    height: 117px;
+}
+
+.custom-shape-divider-bottom-1684267570 .shape-fill {
+    fill: #443E94;
 }
