--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ p{
     margin: auto;
     margin-top: 40px;
     opacity: 0.7;
+    font-size: 1.1vw;
 }
 
 .layer-3{
@@ -101,13 +102,47 @@ p{
 
 
 .content2{
-    height: 80vh;
+    height: 100vh;
     background: #2A3340;
     padding: 150px;
     height: 80vh;
     position: relative;
     z-index: 1;
 }
-.tamano .carousel img{
-        height: 800px;
+.carousel-image{
+    height: 40vh;
 }
+.carousel{
+    width: 50%;
+}
+.contentcenter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    padding-bottom: 1%;
+}
+.center{
+    text-align: center;
+}
+.boton{
+    display: flex;
+    margin: auto;
+    
+}
+footer{
+    width: 100%;
+    height: 10vh;
+    background: #2A3340;
+}
+.ir-arriba{
+    display:none;
+    background-repeat:no-repeat;
+    font-size:20px;
+    color:black;
+    cursor:pointer;
+    position:fixed;
+    bottom:10px;
+    right:10px;
+    z-index:2;
+  }
