--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,9 @@ body{
     opacity: 0.7;
     font-size: 1vw;
 }
+.banner nav a:hover{
+    color: #171314d1;
+}
 .layer-1{
     z-index: 0;
 }
@@ -62,7 +65,7 @@ p{
     margin: auto;
     margin-top: 40px;
     opacity: 0.7;
-    font-size: 1.1vw;
+
 }
 
 .layer-3{
@@ -123,12 +126,12 @@ p{
     padding-bottom: 1%;
 }
 .center{
+    padding-bottom: 2%;
     text-align: center;
 }
 .boton{
     display: flex;
     margin: auto;
-    
 }
 footer{
     width: 100%;
@@ -145,4 +148,8 @@ footer{
     bottom:10px;
     right:10px;
     z-index:2;
-  }
+}
+
+.icon{
+    display: none;
+}
