--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body{
     color: #171314d1;
 }
 .layer-1{
-    z-index: 0;
+    z-index: -1;
 }
 .banner img{
     position: absolute;
@@ -136,7 +136,7 @@ p{
 }
 footer{
     width: 100%;
-    height: 10vh;
+    height: 20vh;
     background: #2A3340;
 }
 .ir-arriba{
@@ -150,7 +150,42 @@ footer{
     right:10px;
     z-index:2;
 }
+.topnav{
+    overflow: hidden;
+    background-color: #514C9CFF;
+}
 
-.icon{
+.topnav a{
+    float: left;
+    display: block;
+    color:#f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover{
+    color: black;
+}
+
+.topnav .icon{
     display: none;
+}
+
+.topnav a.activa{
+    color:white;
+}
+
+footer a{
+    align-items: center;
+    padding-left: 2%;
+    text-decoration: none;
+    font-size: 1.4em;
+    display: flex;
+    padding-top: 100px;
+    color: beige;
+}
+.topnav{
+    z-index: 2;
 }
