--- a/AvisosLegales/css/style.css
+++ b/AvisosLegales/css/style.css
@@ -8,17 +8,23 @@ html{
 }
 body{
     overflow-x: hidden;
-    color: white;
+    color: rgb(255, 255, 255);
     font-family: 'tipografiaPpal';
+    background-color: rgb(67, 67, 74);
 }
-
+a{
+    text-decoration: none;
+    color: beige;
+    font-size: 2em;
+    padding: 2%;
+}
 .banner{
     width: 100%;
     height: 100vh;
     position: relative;
     display: flex;
     justify-content: center;
-    background-color: #514C9CFF;
+    background-color: rgb(22, 20, 47);
 }
 .banner nav{
     position: absolute;
@@ -38,7 +44,7 @@ body{
     color: #171314d1;
 }
 .layer-1{
-    z-index: -1;
+    z-index: 0;
 }
 .banner img{
     position: absolute;
@@ -57,13 +63,13 @@ h1{
     margin: 40px 0;
 }
 p{
-    text-align: justify;
+    
     line-height: 20px;
     letter-spacing: 1px;
     text-indent: 50px;
     width: 100%;
-    max-width: 900px;
-    margin: auto;
+
+
     margin-top: 40px;
     opacity: 0.7;
 
@@ -102,92 +108,4 @@ p{
 @font-face {
     font-family: 'tipografiaPpal';
     src: url('../tip/tip.ttf');
-}
-
-
-.content2{
-    height: 100vh;
-    background: #2A3340;
-    padding: 150px;
-    height: 80vh;
-    position: relative;
-    z-index: 1;
-}
-.carousel-image{
-    height: 40vh;
-}
-.carousel{
-    width: 50%;
-}
-.contentcenter{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    padding-bottom: 1%;
-}
-.center{
-    padding-bottom: 2%;
-    text-align: center;
-}
-.boton{
-    display: flex;
-    margin: auto;
-}
-footer{
-    width: 100%;
-    height: 20vh;
-    background: #2A3340;
-    display: flex;
-}
-.ir-arriba{
-    display:none;
-    background-repeat:no-repeat;
-    font-size:20px;
-    color:black;
-    cursor:pointer;
-    position:fixed;
-    bottom:10px;
-    right:10px;
-    z-index:2;
-}
-.topnav{
-    overflow: hidden;
-    background-color: #514C9CFF;
-}
-
-.topnav a{
-    float: left;
-    display: block;
-    color:#f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-.topnav a:hover{
-    color: black;
-}
-
-.topnav .icon{
-    display: none;
-}
-
-.topnav a.activa{
-    color:white;
-}
-
-footer a{
-    align-items: center;
-    padding-left: 2%;
-    text-decoration: none;
-    font-size: 1.4em;
-    display: flex;
-   justify-content: center;
-    color: beige;
-    margin: auto;
-}
-.topnav{
-    z-index: 2;
 }
