--- a/masLugares/css/style.css
+++ b/masLugares/css/style.css
@@ -10,6 +10,7 @@ body{
     overflow-x: hidden;
     color: white;
     font-family: 'tipografiaPpal';
+    background-color: #2A3340;
 }
 
 .banner{
@@ -18,7 +19,7 @@ body{
     position: relative;
     display: flex;
     justify-content: center;
-    background-color: #514C9CFF;
+    background-color: #2A3340;
 }
 .banner nav{
     position: absolute;
@@ -38,7 +39,7 @@ body{
     color: #171314d1;
 }
 .layer-1{
-    z-index: -1;
+    z-index: 0;
 }
 .banner img{
     position: absolute;
@@ -60,15 +61,37 @@ p{
     text-align: justify;
     line-height: 20px;
     letter-spacing: 1px;
-    text-indent: 50px;
+    text-indent: 20px;
     width: 100%;
-    max-width: 900px;
+    max-width: 1100px;
     margin: auto;
     margin-top: 40px;
-    opacity: 0.7;
-
+    opacity: 0.8;
+    font-size: 18px;
+}
+.topnav{
+    overflow: hidden;
+    background-color: #2A3340;
 }
 
+.topnav a{
+    float: left;
+    display: block;
+    color:#f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover{
+    background-color: #2A3340;
+    color: beige;
+}
+
+.topnav .icon{
+    display: none;
+}
 .layer-3{
     position: absolute;
 }
@@ -105,36 +128,9 @@ p{
 }
 
 
-.content2{
-    height: 100vh;
-    background: #2A3340;
-    padding: 150px;
-    height: 80vh;
-    position: relative;
-    z-index: 1;
-}
-.carousel-image{
-    height: 40vh;
-}
-.carousel{
-    width: 50%;
-}
-.contentcenter{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    padding-bottom: 1%;
-}
-.center{
-    padding-bottom: 2%;
-    text-align: center;
-}
-.boton{
-    display: flex;
-    margin: auto;
-}
 footer{
+    position: absolute;
+    bottom: 0;
     width: 100%;
     height: 20vh;
     background: #2A3340;
@@ -151,43 +147,45 @@ footer{
     right:10px;
     z-index:2;
 }
-.topnav{
-    overflow: hidden;
-    background-color: #514C9CFF;
-}
-
-.topnav a{
-    float: left;
-    display: block;
-    color:#f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-.topnav a:hover{
-    color: black;
-}
-
-.topnav .icon{
-    display: none;
-}
-
-.topnav a.activa{
-    color:white;
-}
 
 footer a{
+    margin: auto;
     align-items: center;
     padding-left: 2%;
     text-decoration: none;
     font-size: 1.4em;
     display: flex;
-   justify-content: center;
     color: beige;
+    justify-content: center;
+}
+
+.contenedor{
+    margin: auto;
+    margin-top: 60px;
+    width: 80%;
+}
+.fila{
+    margin-top: 1%;
+    display: flex;
+    border: 2px solid rgba(32, 100, 87, 0.616);
+    border-radius: 10px;
+}
+
+.tit{
     margin: auto;
 }
-.topnav{
-    z-index: 2;
+
+
+.space{
+    margin-bottom: 20px;
 }
+
+
+.btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 10%;
+}
+
