Login, lugares hechos

--- a/login/css/responsive.css
+++ b/login/css/responsive.css
@@ -20,25 +20,10 @@
 
 
 @media (max-width: 768px) {
-    .banner{
-        height: 95vh;
-    }
-    .layer_1{
-        bottom: 9vw
-    }
-    .layer_4{
-        bottom: 6vw
-    }
-    .layer_5{
-        bottom: 3vw
-    }
-    .carousel-image{
-        height: 40vh;
-    }
-    .carousel{
+    .contenedor{
+        margin-top: 25%;
         width: 80%;
-        height: 35vh;
-    }    
+    }
 }
 
 
