--- a/Contacto/css/style.css
+++ b/Contacto/css/style.css
@@ -5,53 +5,15 @@ html{
 *{
     margin: 0;
     padding: 0;
+    
 }
 body{
     overflow-x: hidden;
-    color: white;
+    color: rgb(0, 0, 0);
     font-family: 'tipografiaPpal';
+    background-color: #2A3340;
 }
 
-.banner{
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    background-color: #514C9CFF;
-}
-.banner nav{
-    position: absolute;
-    right: 0;
-    top: 5vh;
-    z-index: 1;
-}
-.banner nav a{
-    padding-right: 1.5em;
-    text-decoration: none;
-    color: white;
-    opacity: 0.7;
-    font-size: 1vw;
-    z-index: 1;
-}
-.banner nav a:hover{
-    color: #171314d1;
-}
-.layer-1{
-    z-index: -1;
-}
-.banner img{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-}
-
-.content{
-    background: linear-gradient(#1d1d4f, #2A3340);
-    padding: 250px;
-    position: relative;
-    height: 80vh;
-}
 h1{
     text-align: center;
     margin: 40px 0;
@@ -105,45 +67,10 @@ p{
 }
 
 
-.content2{
-    height: 100vh;
-    background: #2A3340;
-    padding: 150px;
-    height: 80vh;
-    position: relative;
-    z-index: 1;
-}
-.carousel-image{
-    height: 40vh;
-}
-.carousel{
-    width: 50%;
-}
-.contentcenter{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    padding-bottom: 1%;
-}
-.center{
-    padding-bottom: 2%;
-    text-align: center;
-}
-.boton{
-    display: flex;
-    margin: auto;
-}
-footer{
-    width: 100%;
-    height: 20vh;
-    background: #2A3340;
-    display: flex;
-}
 
 .topnav{
     overflow: hidden;
-    background-color: #514C9CFF;
+    background-color: #2A3340;
 }
 
 .topnav a{
@@ -180,4 +107,35 @@ footer a{
 }
 .topnav{
     z-index: 2;
+}
+
+.contenedor{
+    margin: auto;
+    width: 40%;
+    height: min-content;
+    background-color: white;
+    border-radius: 20px;
+    padding: 2%;
+    margin-top: 8%;
+}
+
+.login h1{
+    font-size: 32px;
+    margin-bottom: 20px;
+}
+
+.login form{
+    font-size: 20px;
+}
+.login form .form-group{
+    margin-bottom: 12px;
+}
+
+.login form input[type="sumbit"]{
+    font-size: 20px;
+    margin-top: 15px;
+}
+
+a{
+   padding-left: 5%;
 }
